--- a/Readiculous.WebApp/Views/GenreMaster/GenreMasterScreen.cshtml
+++ b/Readiculous.WebApp/Views/GenreMaster/GenreMasterScreen.cshtml
@@ -23,20 +23,18 @@
     </div>
 
     <form id="genreFilterForm">
-        <div class="genre-filter-controls row g-3 align-items-end mx-0 mb-4">
-
-            <div class="filter-group col-md-8 px-0 pe-md-2">
-                <label for="searchString" class="filter-label">Search Genre</label>
-                <input type="text" name="searchString" id="searchString" class="filter-input" placeholder="Search..." value="@ViewData["CurrentFilter"]" />
-            </div>
-
-            <div class="filter-group col-md-4 px-0">
-                <label for="sortType" class="filter-label">Sort By</label>
-                <select name="sortType" id="sortType" class="filter-input" asp-items="@ViewBag.GenreSortTypes"></select>
-            </div>
-
+    <div class="genre-filter-controls row g-3 align-items-end mx-0 mb-4">
+        <div class="filter-group col-md-8 px-0 pe-md-2">
+            <label for="searchString" class="filter-label">Search Genre</label>
+                <input type="text" name="searchString" id="searchString" class="filter-input form-control" placeholder="Search..." value="@ViewData["CurrentFilter"]" />
         </div>
-    </form>
+
+        <div class="filter-group col-md-4 px-0">
+            <label for="sortOrder" class="filter-label">Sort By</label>
+            <select name="sortOrder" id="sortOrder" class="filter-input form-select" asp-items="@ViewBag.GenreSortTypes"></select>
+        </div>
+    </div>
+</form>
 
     <div class="row mx-0">
         <div class="col px-0">
@@ -47,18 +45,17 @@
     </div>
 
     <div class="pagination-controls row mb-4 mx-0 align-items-center">
-        <div class="col-md-6 px-0">
+        <div class="col-md-6 px-0 pagination-container">
             @if (ViewBag.PaginationModel != null)
             {
                 @await Component.InvokeAsync("Pagination", ViewBag.PaginationModel)
             }
         </div>
-        <div class="col-md-6 px-0 text-md-end">
+        <div class="col-md-6 px-0 text-md-end page-size-container">
             @await Component.InvokeAsync("PageSize", new { currentPageSize = ViewBag.PageSize ?? 10 })
         </div>
     </div>
 </div>
-<!-- Add Genre Modal -->
 <div class="modal fade genre-modal" id="addGenreModal" tabindex="-1" aria-labelledby="addGenreModalLabel" aria-hidden="true">
     <div class="modal-dialog">
         <div class="modal-content">
@@ -67,13 +64,11 @@
                 <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
             </div>
             <div class="modal-body" id="addGenreModalBody">
-                <!-- Content loaded via AJAX -->
             </div>
         </div>
     </div>
 </div>
 
-<!-- Edit Genre Modal -->
 <div class="modal fade genre-modal" id="editGenreModal" tabindex="-1" aria-labelledby="editGenreModalLabel" aria-hidden="true">
     <div class="modal-dialog">
         <div class="modal-content">
@@ -82,29 +77,42 @@
                 <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
             </div>
             <div class="modal-body" id="editGenreModalBody">
-                <!-- Content loaded via AJAX -->
             </div>
         </div>
     </div>
 </div>
-@await Html.PartialAsync("~/Views/Shared/_DeleteModal.cshtml")
+
+<div class="modal fade genre-modal" id="viewGenreModal" tabindex="-1" aria-labelledby="viewGenreModalLabel" aria-hidden="true">
+    <div class="modal-dialog">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h5 class="modal-title" id="viewGenreModalLabel">View Genre Details</h5>
+                <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+            </div>
+            <div class="modal-body" id="viewGenreModalBody">
+            </div>
+        </div>
+    </div>
+</div>
+
+@await Html.PartialAsync("~/Views/Shared/_DeleteModal.cshtml", new {
+    ModalId = "deleteModal",
+    ItemIdField = "itemToDeleteId",
+    ItemNameField = "itemToDeleteName"
+})
 
 @section Scripts {
     <script src="~/lib/jquery-validation/dist/jquery.validate.min.js"></script>
     <script src="~/lib/jquery-validation-unobtrusive/jquery.validate.unobtrusive.min.js"></script>
-
+    <script src="~/js/common/commonMaster.js" asp-append-version="true"></script>
     <script>
         const genreMasterSettings = {
             genreMasterScreenUrl: '@Url.Action("GenreMasterScreen", "GenreMaster")',
             genreAddModalUrl: '@Url.Action("GenreAddModal", "GenreMaster")',
             genreEditModalUrl: '@Url.Action("GenreEditModal", "GenreMaster")',
             genreViewModalUrl: '@Url.Action("GenreViewPage", "GenreMaster")',
-            createGenreUrl: '@Url.Action("Create", "GenreMaster")',
-            editGenreUrl: '@Url.Action("Edit", "GenreMaster")',
             deleteGenreUrl: '@Url.Action("Delete", "GenreMaster")'
         };
     </script>
-    <script src="~/js/pagination.js"></script>
-    <script src="~/js/pageSize.js"></script>
     <script src="~/js/adminGenreMaster/genremasterScreen.js" asp-append-version="true"></script>
 }
