--- a/Readiculous.WebApp/Views/UserMaster/UserViewModal.cshtml
+++ b/Readiculous.WebApp/Views/UserMaster/UserViewModal.cshtml
@@ -83,7 +83,7 @@
                 </div>
                 <div class="activity-stat">
                     <div class="stat-value">@Model.AverageRating</div>
-                    <div class="stat-label">Avgerage Rating</div>
+                    <div class="stat-label">Average Rating</div>
                 </div>
 
 
