--- a/Readiculous.WebApp/Views/BookMaster/BookEditModal.cshtml
+++ b/Readiculous.WebApp/Views/BookMaster/BookEditModal.cshtml
@@ -61,7 +61,7 @@
             @if (Model.AllAvailableGenres != null && Model.AllAvailableGenres.Any())
             {
                 <div class="genre-checkbox-grid">
-                    @foreach (var genre in Model.AllAvailableGenres)
+                    @foreach (var genre in Model.AllAvailableGenres.OrderBy(g => g.Name))
                     {
                         <div class="genre-checkbox-item">
                             <input class="form-check-input"
