--- a/Readiculous.WebApp/Views/Shared/_RequiredModal.cshtml
+++ b/Readiculous.WebApp/Views/Shared/_RequiredModal.cshtml
@@ -1,13 +1,15 @@
 ﻿
 <div class="modal fade" id="requiredLoginModal" tabindex="-1" aria-labelledby="requiredLoginModalLabel" aria-hidden="true">
     <div class="modal-dialog modal-dialog-centered">
-        <div class="modal-content text-center p-4" style="background-color: #fceef0; border-radius: 20px;">
-            <img src="~/img/mewmew.png"alt="Login Required"class="mb-3 mx-auto d-block modal-image" />
-            <h4 class="fw-bold">Login Required</h4>
-            <p>You need to login to review more books.</p>
-            <div class="d-grid gap-2">
-                <button type="button" class="btn btn-pink" onclick="switchModal('#requiredLoginModal', '#loginModal')">Login</button>
-                <button type="button" class="btn btn-light" onclick="switchModal('#requiredLoginModal', '#registerModal')">Sign Up</button>
+        <div class="modal-content">
+            <div class="modal-body text-center p-4" style="background-color: #fceef0; border-radius: 20px;">
+                <img src="~/img/mewmew.png" alt="Login Required" class="mb-3 mx-auto d-block modal-image" />
+                <h4 class="fw-bold">Login Required</h4>
+                <p>You need to login to review more books.</p>
+                <div class="d-grid gap-2">
+                    <button type="button" class="btn btn-pink" onclick="switchModal('#requiredLoginModal', '#loginModal')">Login</button>
+                    <button type="button" class="btn btn-light" onclick="switchModal('#requiredLoginModal', '#registerModal')">Sign Up</button>
+                </div>
             </div>
         </div>
     </div>
